# DelegationBench

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  GO_NO_GO.md  PROJECT_PLAN.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  action.yml  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  requirements-ci.in  requirements-ci.txt  requirements-integration.in  requirements-integration.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  scenario_request.yml
.github/workflows/: cflite.yml  delegation-security-example.yml  delegationbench.yml  publish-pypi.yml  real-model-benchmarks.yml  release.yml  scorecard.yml
benchmarks/: README.md
benchmarks/results/: README.md  nvidia-llama-3.3-70b-instruct.json  nvidia-qwen3-next-80b-a3b-instruct.json
docs/: benchmark-protocol.md  ci-integration.md  demo-video-script.md  external-validation.md  fuzzing.md  grant-application-draft.md  grant-readiness.md  nvidia-open-model-benchmarks.md  releasing.md  scenario-coverage.md  validation-kit.md
docs/research/: competitive-landscape.md  langgraph-integration.md  pre-grant-improvements.md  roma-e2e-status.md  roma-integration.md
docs/research/competitive/: agent-security-bench.md  oasb.md  (+8 more)
docs/reviews/: final-review-2026-07-23.md
examples/: langgraph_adapter_example.py  langgraph_real_llm_demo.py  langgraph_real_llm_suite.py  roma_adapter_example.py
experiments/minimal-escalation/: README.md  experiment.py
fuzz/: fuzz_envelope.py  fuzz_oracle.py  fuzz_scenario.py  fuzz_trace.py  trace_builder.py
scenarios/attacks/: attack-005-scope-widening-handoff.yaml  attack-006-nested-beyond-depth.yaml  attack-008-malicious-document.yaml  attack-011-cross-user-contamination.yaml  attack-012-sibling-config-modification.yaml  attack-013-read-to-write-escalation.yaml  attack-015-prepare-to-execute-escalation.yaml  attack-016-principal-substitution-in-grant.yaml  attack-018-customer-notice-scope-escalation.yaml  attack-022-procurement-routing-depth-overrun.yaml  attack-023-research-routing-depth-overrun.yaml  attack-024-document-check-envelope-replay.yaml  attack-025-mailbox-check-envelope-replay.yaml  attack-026-document-ttl-expired-handoff.yaml  attack-027-mailbox-ttl-expired-handoff.yaml  attack-028-archive-attribution-detached-tool-call.yaml  attack-030-configuration-attribution-detached-tool-call.yaml  attack-031-document-result-result-driven-widening.yaml  attack-033-config-result-result-driven-widening.yaml  attack-035-message-owner-principal-substitution.yaml  attack-036-payment-owner-principal-substitution.yaml  attack-037-config-owner-principal-substitution.yaml
scenarios/benign/: benign-001-approved-payment.yaml  benign-002-read-only-research.yaml  benign-003-draft-only-email.yaml  benign-004-approved-send-reviewed-draft.yaml  benign-005-prepare-without-execute.yaml  benign-006-multi-hop-within-depth.yaml  benign-007-config-read-only.yaml  benign-008-credential-doc-within-scope.yaml  benign-009-scope-shrinking-delegation.yaml  benign-010-supervisor-message-in-grant.yaml  benign-012-renewed-delegation-fresh-envelopes.yaml  benign-013-deep-chain-full-attribution.yaml  benign-015-two-principal-store-b-resources-only.yaml  benign-016-document-review-explicit-authority.yaml  benign-017-customer-notice-explicit-authority.yaml  benign-018-invoice-execution-explicit-authority.yaml  benign-019-configuration-change-explicit-authority.yaml  benign-020-support-routing-depth-boundary.yaml  benign-021-procurement-routing-depth-boundary.yaml  benign-023-document-check-single-use-envelope.yaml  benign-025-document-ttl-handoff-within-ttl.yaml  benign-029-configuration-attribution-attributed-tool-call.yaml  benign-030-document-result-result-action-in-scope.yaml  benign-033-document-owner-principal-continuity.yaml  benign-034-message-owner-principal-continuity.yaml
scripts/: build_grant_brief.py
src/delegationbench/: __init__.py  actions.py  agents.py  cli.py  clock.py  corpus.py  defense.py  envelope.py  fuzzer.py  oracle.py  outputs.py  report.py  runner.py  scenario.py  tools.py  trace.py  tracelint.py
tests/: test_cli.py  test_corpus_coverage.py  test_defense.py  test_fuzzer.py  test_integration_langgraph.py  test_langgraph_adapter.py  test_oracle.py  test_outputs.py  test_real_llm_demo.py  test_real_llm_suite.py  test_report.py  test_roma_adapter.py  test_runner.py  test_scenario.py  test_tools.py  test_tracelint.py
(+45 files in other folders)
