[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "delegationbench"
version = "0.4.3"
description = "Deterministic security tests for unsafe multi-agent handoffs and authority escalation"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "sergeyizmailov"}]
keywords = ["agent-security", "llm-security", "multi-agent", "red-teaming",
            "privilege-escalation", "confused-deputy", "fuzzing", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/sergeyizmailov/DelegationBench"
Repository = "https://github.com/sergeyizmailov/DelegationBench"
Issues = "https://github.com/sergeyizmailov/DelegationBench/issues"
Changelog = "https://github.com/sergeyizmailov/DelegationBench/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Optional framework adapter. The supported major-version contract is
# LangGraph 1.x / langchain-core 1.x; major upgrades are gated explicitly.
langgraph = ["langgraph>=1.0,<2", "langchain-core>=1.0,<2"]
langgraph-demo = ["langgraph>=1.0,<2", "langchain-core>=1.0,<2"]

[project.scripts]
delegationbench = "delegationbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
